# nlp_pangloss

./: .gitignore  .test.txt.kate-swp  README.md  fa.py  fa_ctc.py  out.txt  parse_transcriptions_xml.py  pixi.toml  predict.py  preprocessing_text_na.py  pyproject.toml  setup.sh
src/: fa.py  fa_ctc.py  parse_transcriptions_xml.py  predict.py  segment_and_transcribe.py  split_audio.py  transcribe_segments.py  word_forced_alignment.py
src/nlp_pangloss/: diarization.py  parse_transcriptions_xml.py  segment_and_transcribe.py  split_audio.py  word_forced_alignment.py
tests/: serialization.py  test_fa.py  test_parse_transcription_xml.py  test_predict.py  test_split_audio.py  test_transcribe_segments.py
