[project]
authors = [{name = "rfclara", email = "c.rosinafernandez@gmail.com"}]
name = "fa_na"
requires-python = ">=3.9"
version = "0.1.0"
dependencies = ["pyannote-audio==3.3.2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["nvidia", "pytorch", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
fa_na = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]

pydub = ">=0.25.1,<0.26"
pandas = ">=2.2.3,<3"
loguru = ">=0.7.2,<0.8"
textgrid = ">=1.5,<2"
tqdm = ">=4.67.1,<5"
transformers = ">=4.47.1,<5"
pytorch = ">=2.5.1,<3"
torchaudio = ">=2.5.1,<3"
librosa = ">=0.10.2.post1,<0.11"
fastdtw = ">=0.3.4,<0.4"
ruff = ">=0.8.5,<0.9"
torchvision = ">=0.20.1,<0.21"
pytorch-cuda = "12.1.*"
ffmpeg = ">=4.3,<5"
pytest = ">=8.3.5,<9"
packaging = ">=20.0,<25.0"

[tool.pixi.environments]
pyannotenv = { solve-group = "default" }

