[project]
authors = [{name = "rfclara", email = "c.rosinafernandez@gmail.com"}]
name = "nlp_pangloss"
requires-python = ">=3.9"
version = "0.1.0"
dependencies = ["pyannote-audio @ git+https://github.com/pyannote/pyannote-audio.git"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.dependencies]
python = ">=3.9,<3.13"
pydub = "*"
pandas = "*"
loguru = "*"
textgrid = "*"
tqdm = "*"
transformers = "*"
librosa = "*"
fastdtw = "*"
ruff = "*"
ffmpeg = "*"
pytest = "*"
packaging = ">=20.0,<25.0"

[tool.pixi.workspace]
channels = ["nvidia", "pytorch", "conda-forge"]
platforms = ["linux-64", "osx-arm64", "win-64"]

[target.linux-64.dependencies]
pytorch = ">=2.6"
torchvision = "*"
torchaudio = "*"
pytorch-cuda = "12.1.*"

[target.osx-arm64.dependencies]
pytorch = "2.2.*"
torchvision = "0.17.*"
torchaudio = "2.*"
nomkl = "*"

[target.win-64.dependencies]
pytorch = "2.2.*"
torchvision = "0.17.*"
torchaudio = "2.*"

[project.scripts]
transcribe = "nlp_pangloss.segment_and_transcribe:main"
simple_predict = "nlp_pangloss.predict:main"
word_align = "nlp_pangloss.word_forced_alignment:main"
# diarization = "nlp_pangloss.diarization:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nlp_pangloss"]
